test/sema/traits/trait_list_non_conforming_type_arg_struct.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait Base {}

trait A<T : Base> {}

struct S {
    // CHECK: [[# @LINE + 1]]:12: error: cannot satisfy constraint 'number : Base'
    impl A<number>;
}

fn main() {}
